--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ add_executable(SSF2 main.cpp
     include/game.h src/game.cpp
     include/background.h src/background.cpp
     include/playerbullet.h src/playerbullet.cpp
-    include/enemy.h src/enemy.cpp)
+    include/enemy.h src/enemy.cpp
+    include/enemybullet.h src/enemybullet.cpp)
 
 target_link_libraries(SSF2 raylib)
 
