initial menu implemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ add_executable(SSF2 main.cpp
     include/background.h src/background.cpp
     include/playerbullet.h src/playerbullet.cpp
     include/enemy.h src/enemy.cpp
-    include/enemybullet.h src/enemybullet.cpp)
+    include/enemybullet.h src/enemybullet.cpp
+    include/menu.h src/menu.cpp)
 
 target_link_libraries(SSF2 raylib)
 
